spacing fixed

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,6 +13,11 @@ figure:hover{
   cursor:pointer;
 }
 
+.project-gallery {
+  margin-top: -10vh;
+  margin-bottom: -10vh;
+}
+
 .icon {
   max-height: 10vh;
 }
